--- a/index.html
+++ b/index.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAMB + WAEC + NECO + POST-UTME</title>
+  <title>Privacy Policy Company</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+    
+    h1 {
+      text-align: center;
+    }
+    
+    p {
+      line-height: 1.5;
+    }
+  </style>
 </head>
 <body>
-    <h1> Privacy Policy for JAMB + WAEC + NECO + POST-UTME</h1>
-<p> If you require any more information or have any questions about our privacy policy, please feel free to contact us by email at imyraboh@gmail.com </p>
-<p>We consider the privacy of our visitors to be extremely important. This privacy policy document describes in detail the types of personal information collected and recorded by JAMB + WAEC + NECO + POST-UTME and how we use it. </p>
-<p> <b>User name</b><br /> Like many other mobile applications, JAMB + WAEC + NECO + POST-UTME makes use of users names. This information is used to identify users of our app. </p>
-<p> <b>Phone number</b><br />JAMB + WAEC + NECO + POST-UTME uses users phone number to send personnal activation key of the app. </p>
-
-<p><b>Consent</b><br />
-By using our app, you hereby consent to our privacy policy and agree to its terms.
-</p>
-<p><b>Update</b><br />This Privacy Policy was last updated on: Feb 6th, 2023. Should we update, amend or make any changes to our privacy policy, those changes will be posted here.</p>
-<p>
-
+  <h1>Privacy Policy</h1>
+  
+  <p>This privacy policy governs the manner in which Privacy Policy Company collects, uses, maintains and discloses information collected from users (each, a "User") of the website ("Site"). This privacy policy applies to the Site and all products and services offered by Privacy Policy Company.</p>
+  
+  <h2>Personal identification information</h2>
+  
+  <p>We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, fill out a form, and in connection with other activities, services, features or resources we make available on our Site. Users may be asked for, as appropriate, name, email address. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us.</p>
+  
+  <h2>Non-personal identification information</h2>
+  
+  <p>We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users means of connection to our Site, such as the operating system and the Internet service providers utilized and other similar information.</p>
+  
+  <h2>Web browser cookies</h2>
+  
+  <p>Our Site may use "cookies" to enhance User experience. User's web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. Users may choose to set their web browser to refuse cookies or to alert you when cookies are being sent. If they do so, note that some parts of the Site may not function properly.</p>
+  
+  <h2>Changes to this privacy policy</h2>
+  
+  <p>Privacy Policy Company has the discretion to update this privacy policy at any time. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
+  
+  <h2>Your acceptance of these terms</h2>
+  
+  <p>By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes.</p>
+  
+  <h2>Contact us</h2>
+  
+  <p>If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:</p>
+  
+  <p>Email: info@privacypolicycompany.com</p>
+  
 </body>
 </html>
+
