--- a/index.html
+++ b/index.html
@@ -1,53 +1,101 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Privacy Policy Company</title>
+  <title>Zovack Privacy Policy</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      padding: 20px;
     }
-    
+
     h1 {
-      text-align: center;
+      font-size: 24px;
+      color: #333;
     }
-    
+
     p {
-      line-height: 1.5;
+      font-size: 16px;
+      color: #666;
+    }
+
+    .section {
+      margin-bottom: 30px;
+    }
+
+    .section-title {
+      font-size: 20px;
+      color: #333;
+      margin-bottom: 10px;
     }
   </style>
 </head>
-<body>
-  <h1>Privacy Policy</h1>
-  
-  <p>This privacy policy governs the manner in which Privacy Policy Company collects, uses, maintains and discloses information collected from users (each, a "User") of the website ("Site"). This privacy policy applies to the Site and all products and services offered by Privacy Policy Company.</p>
-  
-  <h2>Personal identification information</h2>
-  
-  <p>We may collect personal identification information from Users in a variety of ways, including, but not limited to, when Users visit our site, fill out a form, and in connection with other activities, services, features or resources we make available on our Site. Users may be asked for, as appropriate, name, email address. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us.</p>
-  
-  <h2>Non-personal identification information</h2>
-  
-  <p>We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the browser name, the type of computer and technical information about Users means of connection to our Site, such as the operating system and the Internet service providers utilized and other similar information.</p>
-  
-  <h2>Web browser cookies</h2>
-  
-  <p>Our Site may use "cookies" to enhance User experience. User's web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. Users may choose to set their web browser to refuse cookies or to alert you when cookies are being sent. If they do so, note that some parts of the Site may not function properly.</p>
-  
-  <h2>Changes to this privacy policy</h2>
-  
-  <p>Privacy Policy Company has the discretion to update this privacy policy at any time. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
-  
-  <h2>Your acceptance of these terms</h2>
-  
-  <p>By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes.</p>
-  
-  <h2>Contact us</h2>
-  
-  <p>If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us at:</p>
-  
-  <p>Email: info@privacypolicycompany.com</p>
-  
-</body>
-</html>
 
+<body>
+  <h1>Zovack Privacy Policy</h1>
+
+  <div class="section">
+    <h2 class="section-title">Information We Collect</h2>
+    <p>Zovack collects the following types of information:</p>
+    <ul>
+      <li>Personal information: Name, email address, phone number, and delivery address.</li>
+      <li>Payment information: Credit card details and billing address.</li>
+      <li>Location information: GPS data to provide accurate delivery services.</li>
+      <li>Device information: Device type, operating system, and unique device identifier.</li>
+      <li>Usage data: Information about how you interact with the Zovack application.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">How We Use Your Information</h2>
+    <p>Zovack uses your information for the following purposes:</p>
+    <ul>
+      <li>To process and deliver your orders.</li>
+      <li>To communicate with you regarding your orders, promotions, and updates.</li>
+      <li>To personalize your experience and improve our services.</li>
+      <li>To detect and prevent fraud or unauthorized activities.</li>
+      <li>To comply with legal obligations.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Sharing of Information</h2>
+    <p>We may share your information with the following parties:</p>
+    <ul>
+      <li>Third-party service providers: Delivery partners, payment processors, and marketing platforms.</li>
+      <li>Business partners: Restaurants and grocery stores from which you place orders.</li>
+      <li>Legal authorities: If required by law or to protect our rights and safety.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Security</h2>
+    <p>Zovack takes appropriate measures to protect your information from unauthorized access or disclosure.</p>
+    <p>We use encryption, secure servers, and regularly update our security practices.</p>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Your Choices</h2>
+    <p>You have the following choices regarding your information:</p>
+    <ul>
+      <li>You can update your personal information in the Zovack application settings.</li>
+      <li>You can opt-out of receiving promotional emails by following the instructions in the emails.</li>
+      <li>You can request the deletion of your account by contacting our support team.</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Changes to this Privacy Policy</h2>
+    <p>We may update this privacy policy from time to time.</p>
+    <p>Any changes will be posted on this page, and the effective date will be indicated at the top.</p>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Contact Us</h2>
+    <p>If you have any questions or concerns regarding this privacy policy, please contact us at:</p>
+    <p>Email: support@zovack.com</p>
+    <p>Phone: 123-456-7890</p>
+  </div>
+</body>
+
+</html>
