--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .privacy-policy {
+      max-width: 800px;
     }
 
     h1 {
@@ -32,69 +40,71 @@
 </head>
 
 <body>
-  <h1>Zovack Privacy Policy</h1>
+  <div class="privacy-policy">
+    <h1>Zovack Privacy Policy</h1>
 
-  <div class="section">
-    <h2 class="section-title">Information We Collect</h2>
-    <p>Zovack collects the following types of information:</p>
-    <ul>
-      <li>Personal information: Name, email address, phone number, and delivery address.</li>
-      <li>Payment information: Credit card details and billing address.</li>
-      <li>Location information: GPS data to provide accurate delivery services.</li>
-      <li>Device information: Device type, operating system, and unique device identifier.</li>
-      <li>Usage data: Information about how you interact with the Zovack application.</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2 class="section-title">Information We Collect</h2>
+      <p>Zovack collects the following types of information:</p>
+      <ul>
+        <li>Personal information: Name, email address, phone number, and delivery address.</li>
+        <li>Payment information: Credit card details and billing address.</li>
+        <li>Location information: GPS data to provide accurate delivery services.</li>
+        <li>Device information: Device type, operating system, and unique device identifier.</li>
+        <li>Usage data: Information about how you interact with the Zovack application.</li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2 class="section-title">How We Use Your Information</h2>
-    <p>Zovack uses your information for the following purposes:</p>
-    <ul>
-      <li>To process and deliver your orders.</li>
-      <li>To communicate with you regarding your orders, promotions, and updates.</li>
-      <li>To personalize your experience and improve our services.</li>
-      <li>To detect and prevent fraud or unauthorized activities.</li>
-      <li>To comply with legal obligations.</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2 class="section-title">How We Use Your Information</h2>
+      <p>Zovack uses your information for the following purposes:</p>
+      <ul>
+        <li>To process and deliver your orders.</li>
+        <li>To communicate with you regarding your orders, promotions, and updates.</li>
+        <li>To personalize your experience and improve our services.</li>
+        <li>To detect and prevent fraud or unauthorized activities.</li>
+        <li>To comply with legal obligations.</li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2 class="section-title">Sharing of Information</h2>
-    <p>We may share your information with the following parties:</p>
-    <ul>
-      <li>Third-party service providers: Delivery partners, payment processors, and marketing platforms.</li>
-      <li>Business partners: Restaurants and grocery stores from which you place orders.</li>
-      <li>Legal authorities: If required by law or to protect our rights and safety.</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2 class="section-title">Sharing of Information</h2>
+      <p>We may share your information with the following parties:</p>
+      <ul>
+        <li>Third-party service providers: Delivery partners, payment processors, and marketing platforms.</li>
+        <li>Business partners: Restaurants and grocery stores from which you place orders.</li>
+        <li>Legal authorities: If required by law or to protect our rights and safety.</li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2 class="section-title">Security</h2>
-    <p>Zovack takes appropriate measures to protect your information from unauthorized access or disclosure.</p>
-    <p>We use encryption, secure servers, and regularly update our security practices.</p>
-  </div>
+    <div class="section">
+      <h2 class="section-title">Security</h2>
+      <p>Zovack takes appropriate measures to protect your information from unauthorized access or disclosure.</p>
+      <p>We use encryption, secure servers, and regularly update our security practices.</p>
+    </div>
 
-  <div class="section">
-    <h2 class="section-title">Your Choices</h2>
-    <p>You have the following choices regarding your information:</p>
-    <ul>
-      <li>You can update your personal information in the Zovack application settings.</li>
-      <li>You can opt-out of receiving promotional emails by following the instructions in the emails.</li>
-      <li>You can request the deletion of your account by contacting our support team.</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2 class="section-title">Your Choices</h2>
+      <p>You have the following choices regarding your information:</p>
+      <ul>
+        <li>You can update your personal information in the Zovack application settings.</li>
+        <li>You can opt-out of receiving promotional emails by following the instructions in the emails.</li>
+        <li>You can request the deletion of your account by contacting our support team.</li>
+      </ul>
+    </div>
 
-  <div class="section">
-    <h2 class="section-title">Changes to this Privacy Policy</h2>
-    <p>We may update this privacy policy from time to time.</p>
-    <p>Any changes will be posted on this page, and the effective date will be indicated at the top.</p>
-  </div>
+    <div class="section">
+      <h2 class="section-title">Changes to this Privacy Policy</h2>
+      <p>We may update this privacy policy from time to time.</p>
+      <p>Any changes will be posted on this page, and the effective date will be indicated at the top.</p>
+    </div>
 
-  <div class="section">
-    <h2 class="section-title">Contact Us</h2>
-    <p>If you have any questions or concerns regarding this privacy policy, please contact us at:</p>
-    <p>Email: support@zovack.com</p>
-    <p>Phone: 123-456-7890</p>
+    <div class="section">
+      <h2 class="section-title">Contact Us</h2>
+      <p>If you have any questions or concerns regarding this privacy policy, please contact us at:</p>
+      <p>Email: support@zovack.com</p>
+      <p>Phone: 123-456-7890</p>
+    </div>
   </div>
 </body>
 
