--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     .privacy-policy {
       max-width: 800px;
+      height: 100%;
+      overflow-y: auto;
     }
 
     h1 {
@@ -56,18 +58,6 @@
     </div>
 
     <div class="section">
-      <h2 class="section-title">How We Use Your Information</h2>
-      <p>Zovack uses your information for the following purposes:</p>
-      <ul>
-        <li>To process and deliver your orders.</li>
-        <li>To communicate with you regarding your orders, promotions, and updates.</li>
-        <li>To personalize your experience and improve our services.</li>
-        <li>To detect and prevent fraud or unauthorized activities.</li>
-        <li>To comply with legal obligations.</li>
-      </ul>
-    </div>
-
-    <div class="section">
       <h2 class="section-title">Sharing of Information</h2>
       <p>We may share your information with the following parties:</p>
       <ul>
@@ -105,6 +95,7 @@
       <p>Email: support@zovack.com</p>
       <p>Phone: 123-456-7890</p>
     </div>
+
   </div>
 </body>
 
