--- a/index.html
+++ b/index.html
@@ -72,11 +72,8 @@
       <h2 class="section-title">Information We Collect</h2>
       <p>Zovack collects the following types of information:</p>
       <ul>
-        <li>Personal information: Name, email address, phone number, and delivery address.</li>
-        <li>Payment information: Credit card details and billing address.</li>
+        <li>Personal information: Email address, phone number, and delivery address.</li>
         <li>Location information: GPS data to provide accurate delivery services.</li>
-        <li>Device information: Device type, operating system, and unique device identifier.</li>
-        <li>Usage data: Information about how you interact with the Zovack application.</li>
      </ul>
     </div>
 
@@ -84,7 +81,6 @@
       <h2 class="section-title">Sharing of Information</h2>
       <p>We may share your information with the following parties:</p>
       <ul>
-        <li>Third-party service providers: Delivery partners, payment processors, and marketing platforms.</li>
         <li>Business partners: Restaurants and grocery stores from which you place orders.</li>
         <li>Legal authorities: If required by law or to protect our rights and safety.</li>
       </ul>
@@ -100,8 +96,7 @@
       <h2 class="section-title">Your Choices</h2>
       <p>You have the following choices regarding your information:</p>
       <ul>
-        <li>You can update your personal information in the Zovack application settings.</li>
-        <li>You can opt-out of receiving promotional emails by following the instructions in the emails.</li>
+        <li>You can update your personal information in the Zovack application.</li>
         <li>You can request the deletion of your account by contacting our support team.</li>
       </ul>
     </div>
@@ -109,14 +104,13 @@
     <div class="section">
       <h2 class="section-title">Changes to this Privacy Policy</h2>
       <p>We may update this privacy policy from time to time.</p>
-      <p>Any changes will be posted on this page, and the effective date will be indicated at the top.</p>
+      <p>Any changes will be posted on this page.</p>
     </div>
 
     <div class="section">
       <h2 class="section-title">Contact Us</h2>
       <p>If you have any questions or concerns regarding this privacy policy, please contact us at:</p>
-      <p>Email: support@zovack.com</p>
-      <p>Phone: 123-456-7890</p>
+      <p>Email: zovack2023@gmail.com</p>
     </div>
   </div>
 
